Fixed the drop-down overlap issue on quick add modal window

--- a/system/assets/css/admin/specific/datamanager/quickAddForm/quickAddFormLayout.less
+++ b/system/assets/css/admin/specific/datamanager/quickAddForm/quickAddFormLayout.less
@@ -6,7 +6,7 @@
 	}
 
 	.form-actions {
-		position      : fixed;
+		position      : absolute;
 		bottom        : 0;
 		width         : 100%;
 		margin-bottom : 0;
